--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.9
 lark==1.3.0
+llvmlite==0.45.0
 MarkupSafe==3.0.2
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
@@ -56,6 +57,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.6
 notebook_shim==0.2.4
+numba==0.62.1
 numpy==2.3.3
 packaging==25.0
 pandas==2.3.2
@@ -83,6 +85,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.27.1
+scipy==1.16.2
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==80.9.0
